<resources>
    <string name="app_name">Visualize</string>

    <string name="action_settings">Settings</string>

    <!-- - - - - - - - - - - - - - - -
          - Used by Preferences  -
          - - - - - - - - - - - - - - - -->

    <!-- Value in SharedPreferences for red color option -->
    <string name="pref_color_red_value" translatable="false">red</string>

    <!-- Value in SharedPreferences for blue color option -->
    <string name="pref_color_blue_value" translatable="false">blue</string>

    <!-- Value in SharedPreferences for green color option -->
    <string name="pref_color_green_value" translatable="false">green</string>

    <!-- Labels for the color options -->
    <string name="pref_color_red_label">Red</string>
    <string name="pref_color_blue_label">Blue</string>
    <string name="pref_color_green_label">Green</string>

    <string name="pref_key_show_bass" translatable="false">show_bass</string>
    <string name="pref_label_show_bass">Show Bass</string>
    <string name="pref_show_false">Hidden</string>
    <string name="pref_show_true">Shown</string>
    <string name="pref_key_show_treble" translatable="false">show_treble</string>
    <string name="pref_label_show_treble">Show Treble</string>
    <string name="pref_key_show_mid" translatable="false">show_mid</string>
    <string name="pref_label_show_mid">Show Mid</string>
    <string name="pref_key_shape_color">shape_color</string>
    <string name="pref_label_shape_color">Shape Color</string>
    <string name="pref_size_key" translatable="false">size_key</string>
    <string name="pref_size_label">Size Multiplier</string>
    <string name="pref_size_default" translatable="false">1</string>
</resources>
