<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference
        android:key="@string/pref_key_show_bass"
        android:title="@string/pref_label_show_bass"
        android:defaultValue="@bool/pref_show_bass_default"
        android:summaryOff="@string/pref_show_false"
        android:summaryOn="@string/pref_show_true"/>

    <CheckBoxPreference
        android:key="@string/pref_key_show_treble"
        android:title="@string/pref_label_show_treble"
        android:defaultValue="@bool/pref_show_treble_default"
        android:summaryOff="@string/pref_show_false"
        android:summaryOn="@string/pref_show_true"/>

    <CheckBoxPreference
        android:key="@string/pref_key_show_mid"
        android:title="@string/pref_label_show_mid"
        android:defaultValue="@bool/pref_show_mid_default"
        android:summaryOff="@string/pref_show_false"
        android:summaryOn="@string/pref_show_true"/>

     <EditTextPreference
        android:key="@string/pref_size_key"
        android:title="@string/pref_size_label"
        android:defaultValue="@string/pref_size_default"/>

    <ListPreference
        android:key="@string/pref_key_shape_color"
        android:title="@string/pref_label_shape_color"
        android:defaultValue="@string/pref_color_red_value"
        android:entries="@array/pref_color_option_labels"
        android:entryValues="@array/pref_color_option_values"/>

</PreferenceScreen>